css/assetStatus.css
body{
    margin: 0px;
    font-family: 'Nanum Gothic', sans-serif;
    background-color: rgba(248, 248, 248);
}
.main-graph-area{
    width: 100vw;
    height: 50vh;
    background-color: white;

    border-bottom-left-radius: 10px;
    border-bottom-right-radius: 10px;

    box-shadow: 3px 3px rgb(230, 230, 230);
}

.main-graph-area .bar-graph-top-area{
    position: relative;
    height: 8vh;
    width: 100vw;

    border-bottom: 1px #E5E5E5 solid;
}

.asset-category{
    float: left;
    width: 20vw;
    height: 3vh;
    text-align: center;
    line-height: 3vh;

    margin-top: 5vh;
}
.asset-category#left{
    float: left;
    margin-left: 15vw;
    border-bottom: 1px #1DCB9D solid;
}

.asset-category#right{
    float: left;
    margin-left: 28vw;
}
.bar-graph-area{
    float: left;
    height: 35vh;
    width: 90vw;
    margin-left: 5vw;
    margin-right: 5vw;
    margin-top: 4.5vh;
    margin-bottom: 2.5vh;

    /* background-color:rgb(255, 232, 255); */
}

.bar-graph-title{
    font-weight: bolder;
    font-size: 0.8em;
    margin-left: 5px;
}

.graph-area{
    width: 95%;
    height: 5vh;

    margin-left: 2.5%;
    margin-right: 2.5%;
    margin-top: 2vh;

    /* background-color: cornsilk; */
}

.draw-bar-graph{
    position: relative;
    height: 50%;
    float: left;
}
.draw-bar-graph#first-ratio{
    width: 58%;
    background-color: #1DCB9D;
    border-radius: 10px 0 0 10px;
}

.draw-bar-graph#second-ratio{
    width: 18%;
    background-color: #4471FB;
    border-radius: 1px;
    margin-left: 3px;
}

.draw-bar-graph#third-ratio{
    width: 8%;
    background-color: #FD6A51;
    border-radius: 1px;
    margin-left: 3px;
}

.draw-bar-graph#fourth-ratio{
    width: 8%;
    background-color: #FBAE29;
    border-radius: 0 10px 10px 0;
    margin-left: 3px;
}

.graph-info-area{
    width: 90%;
    width: 95%;
    height: 5vh;

    margin-left: 2.5%;
    margin-right: 2.5%;
    /* margin-top: 2vh; */

    /* background-color: cornsilk; */
}

.graph-info-area .color-info{
    float: left;
    width: 13px;
    height: 13px;
    margin-top: 1.8vh;
    border-radius: 3px;
}

.graph-info-area .info-text{
    float: left;
    width: 40%;
    height: 100%;
    line-height: 5vh;
    margin-left: 10px;

    color: #797A7A;
    font-size: 0.8em;
}
.graph-info-area .percent-info{
    float: left;
    width: 15%;
    height: 100%;
    line-height: 5vh;
    color: #797A7A;
    font-size: 0.8em;
}
.graph-info-area .money-info{
    float: right;
    width: fit-content;
    height: 100%;
    line-height: 5vh;
    color: #797A7A;
    font-size: 0.8em;
}

.graph-info-area .color-info#first{
    background-color: #1DCB9D;
}
.graph-info-area .color-info#second{
    background-color: #4471FB;
}
.graph-info-area .color-info#third{
    background-color: #FD6A51;
}
.graph-info-area .color-info#fourth{
    background-color: #FBAE29;
}

/* 
    중단의 추천 버튼들
*/

.recomment-btn-area{
    width: 100vw;
    height: 140px;
    margin-top: 4px;

    /* background-color:darkcyan; */
}

.recommend-btn-img{
    float: left;
    width: 20vw;
    height: 10vh;

    margin-bottom: 5%;
    border-radius: 10px;
}
.recommend-btn-img#first{
    margin-left: 4vw;
}

.recommend-btn-img#second{
    margin-left: 11vw;
}

.recommend-btn-img#third{
    margin-left: 11vw;
}

/* 
    하단 부채비율 추가
*/
.bottom-graph-area{
    width: 100vw;
    height: 35vh;
    background-color: white;

    box-shadow: -3px -3px rgb(230, 230, 230);
}

.dept-graph-area{
    width: 90%;
    height: 20vw;
}

.dept-graph-title{
    width: 100%;
    height: 1em;
    float: left;

    font-weight: bolder;
    font-size: 0.8em;
    margin-left: 5px;
    margin-top: 2vh;
}

#dept-graph-doughnut{
    float: left;
    width: 45%;
    margin-left:5%;
    margin-right:5%;
    margin-top: 2vh;
    height: 20vh;
}

#donut-percent-inner-text{
    width: 42%;
    height: 20vh;
    position: absolute;
    padding-top: 8vh;
    text-align: center;
    z-index: 999999999999999;
}

#donut-percent-text{
    font-size: 1.3em;
    font-weight: bolder;
    color: #FD6A51;
}

#donut-center-text{
    font-size: 0.9em;
    color: #797A7A;
}

.dept-graph-content{
    position: absolute;
    width: 45%;
    height: 10vh;
    margin-top: 2vh;
    margin-left: 50vw;
    padding-top: 10vh;
    font-size: 0.8em;
    line-height: 1.6em;    
}

